--- a/tst/PortingAssistantExtensionUITests/PortingAssistantExtensionUITests.csproj
+++ b/tst/PortingAssistantExtensionUITests/PortingAssistantExtensionUITests.csproj
@@ -58,6 +58,7 @@
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.IO.Compression.FileSystem" />
     <Reference Include="WebDriver, Version=3.8.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\Selenium.WebDriver.3.8.0\lib\net45\WebDriver.dll</HintPath>
     </Reference>
