--- a/tst/PortingAssistantExtensionUITests/packages.config
+++ b/tst/PortingAssistantExtensionUITests/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AWSSDK.Core" version="3.7.3.9" targetFramework="net45" />
+  <package id="AWSSDK.SecretsManager" version="3.7.1.22" targetFramework="net45" />
   <package id="Castle.Core" version="4.2.1" targetFramework="net45" />
   <package id="Microsoft.WinAppDriver.Appium.WebDriver" version="1.0.1-Preview" targetFramework="net45" />
   <package id="MSTest.TestAdapter" version="1.2.0" targetFramework="net45" />
