--- a/tst/PortingAssistantExtensionUITests/PortingAssistantExtensionUITests.csproj
+++ b/tst/PortingAssistantExtensionUITests/PortingAssistantExtensionUITests.csproj
@@ -42,10 +42,10 @@
       <HintPath>packages\Microsoft.WinAppDriver.Appium.WebDriver.1.0.1-Preview\lib\net45\appium-dotnet-driver.dll</HintPath>
     </Reference>
     <Reference Include="AWSSDK.Core, Version=3.3.0.0, Culture=neutral, PublicKeyToken=885c28607f98e604, processorArchitecture=MSIL">
-      <HintPath>..\..\src\packages\AWSSDK.Core.3.7.3.9\lib\net45\AWSSDK.Core.dll</HintPath>
+      <HintPath>packages\AWSSDK.Core.3.7.3.9\lib\net45\AWSSDK.Core.dll</HintPath>
     </Reference>
     <Reference Include="AWSSDK.SecretsManager, Version=3.3.0.0, Culture=neutral, PublicKeyToken=885c28607f98e604, processorArchitecture=MSIL">
-      <HintPath>..\..\src\packages\AWSSDK.SecretsManager.3.7.1.22\lib\net45\AWSSDK.SecretsManager.dll</HintPath>
+      <HintPath>packages\AWSSDK.SecretsManager.3.7.1.22\lib\net45\AWSSDK.SecretsManager.dll</HintPath>
     </Reference>
     <Reference Include="Castle.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
       <HintPath>packages\Castle.Core.4.2.1\lib\net45\Castle.Core.dll</HintPath>
@@ -95,7 +95,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Analyzer Include="..\..\src\packages\AWSSDK.SecretsManager.3.7.1.22\analyzers\dotnet\cs\AWSSDK.SecretsManager.CodeAnalysis.dll" />
+    <Analyzer Include="packages\AWSSDK.SecretsManager.3.7.1.22\analyzers\dotnet\cs\AWSSDK.SecretsManager.CodeAnalysis.dll" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
