--- a/src/PortingAssistantVSExtensionClient/PortingAssistantVSExtensionClient.csproj
+++ b/src/PortingAssistantVSExtensionClient/PortingAssistantVSExtensionClient.csproj
@@ -86,6 +86,7 @@
     </Compile>
     <Compile Include="Models\AnalyzeSolutionRequest.cs" />
     <Compile Include="Models\AnalyzeSolutionResponse.cs" />
+    <Compile Include="Models\DeploymentParameters.cs" />
     <Compile Include="Models\ProjectFilePortingRequest.cs" />
     <Compile Include="Models\ProjectFilePortingResponse.cs" />
     <Compile Include="Models\TelemetryConfiguration.cs" />
@@ -128,6 +129,14 @@
     </Content>
     <Content Include="Resources\abc.bat">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="Resources\deploymentconfiguration.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="Resources\deployment.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
     <None Include="source.extension.vsixmanifest">
