--- a/src/PortingAssistantVSExtensionClient/PortingAssistantVSExtensionClient.csproj
+++ b/src/PortingAssistantVSExtensionClient/PortingAssistantVSExtensionClient.csproj
@@ -110,6 +110,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PortingAssistantVSExtensionClientPackage.cs" />
     <Compile Include="Utils\AwsUtils.cs" />
+    <Compile Include="Utils\FilesUtils.cs" />
     <Compile Include="Utils\NotificationUtils.cs" />
     <Compile Include="Utils\PipeUtils.cs" />
     <Compile Include="Utils\SolutionUtils.cs" />
