--- a/src/PortingAssistantVSExtensionClient/PortingAssistantVSExtensionClient.csproj
+++ b/src/PortingAssistantVSExtensionClient/PortingAssistantVSExtensionClient.csproj
@@ -168,8 +168,8 @@
     <PackageReference Include="AWSSDK.APIGateway">
       <Version>3.7.2.11</Version>
     </PackageReference>
-    <PackageReference Include="AWSSDK.Core">
-      <Version>3.7.3.5</Version>
+    <PackageReference Include="AWSSDK.EC2">
+      <Version>3.7.34.1</Version>
     </PackageReference>
     <PackageReference Include="AWSSDK.S3">
       <Version>3.7.3.14</Version>
