--- a/src/PortingAssistantVSExtensionClient/PortingAssistantVSExtensionClient.csproj
+++ b/src/PortingAssistantVSExtensionClient/PortingAssistantVSExtensionClient.csproj
@@ -111,6 +111,7 @@
     <Compile Include="PortingAssistantVSExtensionClientPackage.cs" />
     <Compile Include="Utils\AwsUtils.cs" />
     <Compile Include="Utils\FilesUtils.cs" />
+    <Compile Include="Utils\KerborosSideCarUtils.cs" />
     <Compile Include="Utils\NotificationUtils.cs" />
     <Compile Include="Utils\PipeUtils.cs" />
     <Compile Include="Utils\SolutionUtils.cs" />
@@ -189,6 +190,9 @@
     <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="16.10.31">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="System.Configuration.ConfigurationManager">
+      <Version>5.0.0</Version>
     </PackageReference>
     <PackageReference Include="System.Text.Json">
       <Version>5.0.2</Version>
