--- a/src/PortingAssistantVSExtensionClient/PortingAssistantVSExtensionClient.csproj
+++ b/src/PortingAssistantVSExtensionClient/PortingAssistantVSExtensionClient.csproj
@@ -50,62 +50,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Commands\AutoAssessmentCommand.cs" />
-    <Compile Include="Commands\CommandsCommon.cs" />
-    <Compile Include="Commands\ContactSupportCommand.cs" />
-    <Compile Include="Commands\DisplaySettings.cs" />
-    <Compile Include="Commands\DocumentCommand.cs" />
     <Compile Include="Commands\PortingAssistantVSExtensionClientPackage.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>PortingAssistantVSExtensionClientPackage.vsct</DependentUpon>
     </Compile>
-    <Compile Include="Commands\ProjectPortingCommand.cs" />
-    <Compile Include="Commands\SolutionAssessmentCommand.cs" />
-    <Compile Include="Commands\SolutionPortingCommand.cs" />
-    <Compile Include="Common\Constants.cs" />
-    <Compile Include="Common\ExternalUrls.cs" />
-    <Compile Include="Common\LanguageServerStatus.cs" />
-    <Compile Include="Common\PAGlobalService.cs" />
-    <Compile Include="Common\TargetFrameWorkType.cs" />
-    <Compile Include="Dialogs\AddProfileDialog.xaml.cs">
-      <DependentUpon>AddProfileDialog.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Dialogs\PortingDialog.xaml.cs">
-      <DependentUpon>PortingDialog.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Dialogs\SelectTargetDialog.xaml.cs">
-      <DependentUpon>SelectTargetDialog.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Dialogs\WelcomeDialog.xaml.cs">
-      <DependentUpon>WelcomeDialog.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Models\AnalyzeSolutionRequest.cs" />
-    <Compile Include="Models\AnalyzeSolutionResponse.cs" />
-    <Compile Include="Models\ProjectFilePortingRequest.cs" />
-    <Compile Include="Models\ProjectFilePortingResponse.cs" />
-    <Compile Include="Models\TelemetryConfiguration.cs" />
-    <Compile Include="Models\UpdateSettingsRequest.cs" />
-    <Compile Include="Options\DataSharingOption.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="Options\DataSharingOptionPage.xaml.cs">
-      <DependentUpon>DataSharingOptionPage.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Options\GeneralOption.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="Options\OptionPageControl.xaml.cs">
-      <DependentUpon>OptionPageControl.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Common\UserSettings.cs" />
-    <Compile Include="PortingAssistantLanguageClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="PortingAssistantVSExtensionClientPackage.cs" />
-    <Compile Include="Utils\AwsUtils.cs" />
-    <Compile Include="Utils\NotificationUtils.cs" />
-    <Compile Include="Utils\PipeUtils.cs" />
-    <Compile Include="Utils\SolutionUtils.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.lock.json" />
@@ -157,32 +107,6 @@
       <LastGenOutput>PortingAssistantVSExtensionClientPackage.cs</LastGenOutput>
     </VSCTCompile>
   </ItemGroup>
-  <ItemGroup>
-    <Page Include="Dialogs\AddProfileDialog.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Dialogs\PortingDialog.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Dialogs\SelectTargetDialog.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Dialogs\WelcomeDialog.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Options\DataSharingOptionPage.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Options\OptionPageControl.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-  </ItemGroup>
   <ItemGroup />
   <ItemGroup>
     <Content Include="PortingAssistantLanguageServer\PortingAssistantExtensionServer.exe">
@@ -206,6 +130,7 @@
       <VSIXSubPath>Resources</VSIXSubPath>
     </Content>
   </ItemGroup>
+  <Import Project="..\PortingAssistantExtensionClientShared\PortingAssistantExtensionClientShared.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
   <Target Name="BuildLanguageServer" BeforeTargets="CoreCompile">
