--- a/src/PortingAssistantVSExtensionClient2022/PortingAssistantVSExtensionClient2022.csproj
+++ b/src/PortingAssistantVSExtensionClient2022/PortingAssistantVSExtensionClient2022.csproj
@@ -133,4 +133,11 @@
   <Import Project="..\PortingAssistantExtensionClientShared\PortingAssistantExtensionClientShared.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
+  <Target Name="BuildLanguageServer" BeforeTargets="CoreCompile">
+    <ItemGroup>
+      <RemoveFiles Include="$(LanguageServerPath)**" />
+    </ItemGroup>
+    <Delete Files="@(RemoveFiles)" />
+    <Exec Command="dotnet publish $(ProjectDir)..\PortingAssistantExtensionServer\PortingAssistantExtensionServer.csproj -c Release -f netcoreapp3.1 -p:PublishSingleFile=true -r win-x64 --self-contained false   -o $(ProjectDir)\PortingAssistantLanguageServer\" />
+  </Target>
 </Project>
