--- a/src/PortingAssistantVSExtensionClient2019/PortingAssistantVSExtensionClient2019.csproj
+++ b/src/PortingAssistantVSExtensionClient2019/PortingAssistantVSExtensionClient2019.csproj
@@ -10,7 +10,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectTypeGuids>{82b43b9b-a64c-4715-b499-d71e9ca2bd60};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <ProjectGuid>{9DCE8A66-0BAC-455D-BB16-FB238AE5B8BB}</ProjectGuid>
+    <ProjectGuid>{1D66ECB9-5E4A-47F0-BD62-10C4B291FDDC}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>PortingAssistantVSExtensionClient</RootNamespace>
@@ -37,7 +37,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;Dev16</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -45,67 +45,17 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <DefineConstants>TRACE;Dev16</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Commands\AutoAssessmentCommand.cs" />
-    <Compile Include="Commands\CommandsCommon.cs" />
-    <Compile Include="Commands\ContactSupportCommand.cs" />
-    <Compile Include="Commands\DisplaySettings.cs" />
-    <Compile Include="Commands\DocumentCommand.cs" />
-    <Compile Include="Commands\PortingAssistantVSExtensionClientPackage.cs">
+    <Compile Include="PortingAssistantVSExtensionClientPackage.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>PortingAssistantVSExtensionClientPackage.vsct</DependentUpon>
     </Compile>
-    <Compile Include="Commands\ProjectPortingCommand.cs" />
-    <Compile Include="Commands\SolutionAssessmentCommand.cs" />
-    <Compile Include="Commands\SolutionPortingCommand.cs" />
-    <Compile Include="Common\Constants.cs" />
-    <Compile Include="Common\ExternalUrls.cs" />
-    <Compile Include="Common\LanguageServerStatus.cs" />
-    <Compile Include="Common\PAGlobalService.cs" />
-    <Compile Include="Common\TargetFrameWorkType.cs" />
-    <Compile Include="Dialogs\AddProfileDialog.xaml.cs">
-      <DependentUpon>AddProfileDialog.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Dialogs\PortingDialog.xaml.cs">
-      <DependentUpon>PortingDialog.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Dialogs\SelectTargetDialog.xaml.cs">
-      <DependentUpon>SelectTargetDialog.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Dialogs\WelcomeDialog.xaml.cs">
-      <DependentUpon>WelcomeDialog.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Models\AnalyzeSolutionRequest.cs" />
-    <Compile Include="Models\AnalyzeSolutionResponse.cs" />
-    <Compile Include="Models\ProjectFilePortingRequest.cs" />
-    <Compile Include="Models\ProjectFilePortingResponse.cs" />
-    <Compile Include="Models\TelemetryConfiguration.cs" />
-    <Compile Include="Models\UpdateSettingsRequest.cs" />
-    <Compile Include="Options\DataSharingOption.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="Options\DataSharingOptionPage.xaml.cs">
-      <DependentUpon>DataSharingOptionPage.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Options\GeneralOption.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="Options\OptionPageControl.xaml.cs">
-      <DependentUpon>OptionPageControl.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Common\UserSettings.cs" />
-    <Compile Include="PortingAssistantLanguageClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="PortingAssistantVSExtensionClientPackage.cs" />
-    <Compile Include="Utils\AwsUtils.cs" />
-    <Compile Include="Utils\NotificationUtils.cs" />
-    <Compile Include="Utils\PipeUtils.cs" />
-    <Compile Include="Utils\SolutionUtils.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.lock.json" />
@@ -151,37 +101,11 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <VSCTCompile Include="Commands\PortingAssistantVSExtensionClientPackage.vsct">
+    <VSCTCompile Include="PortingAssistantVSExtensionClientPackage.vsct">
       <Generator>VsctGenerator</Generator>
       <ResourceName>Menus.ctmenu</ResourceName>
       <LastGenOutput>PortingAssistantVSExtensionClientPackage.cs</LastGenOutput>
     </VSCTCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <Page Include="Dialogs\AddProfileDialog.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Dialogs\PortingDialog.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Dialogs\SelectTargetDialog.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Dialogs\WelcomeDialog.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Options\DataSharingOptionPage.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Options\OptionPageControl.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
@@ -206,6 +130,7 @@
       <VSIXSubPath>Resources</VSIXSubPath>
     </Content>
   </ItemGroup>
+  <Import Project="..\PortingAssistantExtensionClientShared\PortingAssistantExtensionClientShared.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
   <Target Name="BuildLanguageServer" BeforeTargets="CoreCompile">
