fix: use aws sdk for metrics upload

--- a/src/PortingAssistantExtensionTelemetry/PortingAssistantExtensionTelemetry.csproj
+++ b/src/PortingAssistantExtensionTelemetry/PortingAssistantExtensionTelemetry.csproj
@@ -8,8 +8,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="PortingAssistant.Client.Telemetry" Version="1.10.2" />
-		<PackageReference Include="PortingAssistant.Client.Common" Version="1.11.33" />
+		<PackageReference Include="PortingAssistant.Client.Telemetry" Version="1.12.8-alpha-g262e0902bb" />
+		<PackageReference Include="PortingAssistant.Client.Common" Version="1.12.8-alpha-g262e0902bb" />
 	</ItemGroup>
 
 </Project>
