refactor: test solutions location string

--- a/tst/PortingAssistantExtensionUITests/PortingAssistantExtensionUITests.csproj
+++ b/tst/PortingAssistantExtensionUITests/PortingAssistantExtensionUITests.csproj
@@ -86,6 +86,7 @@
     <Compile Include="CustomServerTest.cs" />
     <Compile Include="Metric.cs" />
     <Compile Include="ControlsTest.cs" />
+    <Compile Include="TestDeploymentTest.cs" />
     <Compile Include="VisualStudioSession.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
