fix: fix failed to update credentials issue in the adding profile

--- a/src/PortingAssistantVSExtensionClient2019/PortingAssistantVSExtensionClient2019.csproj
+++ b/src/PortingAssistantVSExtensionClient2019/PortingAssistantVSExtensionClient2019.csproj
@@ -93,8 +93,8 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="System.Text.Json">
-      <Version>5.0.2</Version>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>10.0.1</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
