--- a/tst/PortingAssistantExtensionUITests/packages.config
+++ b/tst/PortingAssistantExtensionUITests/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AWSSDK.Core" version="3.7.3.9" targetFramework="net45" />
+  <package id="AWSSDK.CloudFormation" version="3.7.7.15" targetFramework="net45" />
+  <package id="AWSSDK.Core" version="3.7.6.1" targetFramework="net45" />
+  <package id="AWSSDK.ECR" version="3.7.2.15" targetFramework="net45" />
   <package id="AWSSDK.SecretsManager" version="3.7.1.22" targetFramework="net45" />
   <package id="Castle.Core" version="4.2.1" targetFramework="net45" />
   <package id="Microsoft.WinAppDriver.Appium.WebDriver" version="1.0.1-Preview" targetFramework="net45" />
