test: initial check in for vs2022 tests

--- a/tst/PortingAssistantExtensionUITests/PortingAssistantExtensionUITests.csproj
+++ b/tst/PortingAssistantExtensionUITests/PortingAssistantExtensionUITests.csproj
@@ -81,12 +81,13 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="ControlsTestVs2022.cs" />
+    <Compile Include="CustomServerTestVs2022.cs" />
     <Compile Include="Secret.cs" />
     <Compile Include="ExpectedValues.cs" />
     <Compile Include="CustomServerTest.cs" />
     <Compile Include="Metric.cs" />
     <Compile Include="ControlsTest.cs" />
-    <Compile Include="TestDeploymentTest.cs" />
     <Compile Include="VisualStudioSession.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
