--- a/tst/PortingAssistantExtensionUITests/PortingAssistantExtensionUITests.csproj
+++ b/tst/PortingAssistantExtensionUITests/PortingAssistantExtensionUITests.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Metric.cs" />
     <Compile Include="ControlsTest.cs" />
     <Compile Include="ProfileTests.cs" />
+    <Compile Include="NET6Test.cs" />
     <Compile Include="VisualStudioSession.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
