tests: add profile tests for vs2022

--- a/tst/PortingAssistantExtensionUITests/PortingAssistantExtensionUITests.csproj
+++ b/tst/PortingAssistantExtensionUITests/PortingAssistantExtensionUITests.csproj
@@ -83,6 +83,7 @@
   <ItemGroup>
     <Compile Include="ControlsTestVs2022.cs" />
     <Compile Include="CustomServerTestVs2022.cs" />
+    <Compile Include="ProfileTestsVs2022.cs" />
     <Compile Include="Secret.cs" />
     <Compile Include="ExpectedValues.cs" />
     <Compile Include="CustomServerTest.cs" />
