--- a/tst/PortingAssistantExtensionUITests/PortingAssistantExtensionUITests.csproj
+++ b/tst/PortingAssistantExtensionUITests/PortingAssistantExtensionUITests.csproj
@@ -81,6 +81,9 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="ControlsTestVs2022.cs" />
+    <Compile Include="CustomServerTestVs2022.cs" />
+    <Compile Include="ProfileTestsVs2022.cs" />
     <Compile Include="Secret.cs" />
     <Compile Include="ExpectedValues.cs" />
     <Compile Include="CustomServerTest.cs" />
