--- a/src/PortingAssistantVSExtensionClient2022/Resources/porting-assistant-config.json
+++ b/src/PortingAssistantVSExtensionClient2022/Resources/porting-assistant-config.json
@@ -7,14 +7,14 @@
     }
   },
   "TelemetryConfiguration": {
-    "InvokeUrl": "",
-	"Region": "",
-	"ServiceName": "",
+    "InvokeUrl": "https://8cvsix1u33.execute-api.us-east-1.amazonaws.com/gamma",
+    "Region": "us-east-1",
+    "ServiceName": "encore",
     "Description": "Porting Assistant for .NET Extension",
     "Suffix": [
       ".log",
       ".metrics"
     ],
-	"LogTimerInterval": "120000"
+    "LogTimerInterval": "120000"
   }
 }
