revert back unwanted change.

--- a/tst/PortingAssistantExtensionUITests_FlaUI/appsettings.json
+++ b/tst/PortingAssistantExtensionUITests_FlaUI/appsettings.json
@@ -6,7 +6,7 @@
     "porting-solution-path2": "value1"
   },
   "aws": {
-    "AwsProfileSecretArn": "arn:aws:secretsmanager:us-west-2:192834627187:secret:IntegrationTestRoleBeta-OhxaxI",
+    "AwsProfileSecretArn": "",
     "AwsRegion": "us-west-2"
   }
 
