feat: move vs launch location to settings

--- a/tst/PortingAssistantExtensionUITests_FlaUI/appsettings.json
+++ b/tst/PortingAssistantExtensionUITests_FlaUI/appsettings.json
@@ -8,6 +8,10 @@
   "aws": {
     "AwsProfileSecretArn": "",
     "AwsRegion": "us-west-2"
+  },
+  "vslocation": {
+    "2019": "C:\\Program Files (x86)\\Microsoft Visual Studio\\2019\\Professional\\Common7\\IDE\\devenv.exe",
+    "2022": ""
   }
 
 }
