--- a/src/PortingAssistantExtensionServer/PortingAssistantExtensionServer.csproj
+++ b/src/PortingAssistantExtensionServer/PortingAssistantExtensionServer.csproj
@@ -2,7 +2,7 @@
 
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
-		<TargetFramework>netcoreapp3.1</TargetFramework>
+		<TargetFramework>net6.0</TargetFramework>
 		<IncludeSymbolsInSingleFile>true</IncludeSymbolsInSingleFile>
 	</PropertyGroup>
 
@@ -13,8 +13,8 @@
 	<ItemGroup>
 		<PackageReference Include="OmniSharp.Extensions.LanguageProtocol" Version="0.18.3" />
 		<PackageReference Include="OmniSharp.Extensions.LanguageServer" Version="0.18.3" />
-		<PackageReference Include="PortingAssistant.Client.Client" Version="1.12.8-alpha-g262e0902bb" />
-		<PackageReference Include="PortingAssistant.Client.Common" Version="1.12.8-alpha-g262e0902bb" />
+		<PackageReference Include="PortingAssistant.Client.Client" Version="1.12.42-alpha-g51acfaf8c5" />
+		<PackageReference Include="PortingAssistant.Client.Common" Version="1.12.42-alpha-g51acfaf8c5" />
 		<PackageReference Include="Serilog" Version="2.10.0" />
 		<PackageReference Include="Serilog.Extensions.Logging" Version="3.1.0" />
 		<PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
