--- a/src/PortingAssistantExtensionTelemetry/PortingAssistantExtensionTelemetry.csproj
+++ b/src/PortingAssistantExtensionTelemetry/PortingAssistantExtensionTelemetry.csproj
@@ -1,15 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>netcoreapp3.1</TargetFramework>
+		<TargetFramework>net6.0</TargetFramework>
 	</PropertyGroup>
 	<PropertyGroup>
 		<RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="PortingAssistant.Client.Telemetry" Version="1.12.8-alpha-g262e0902bb" />
-		<PackageReference Include="PortingAssistant.Client.Common" Version="1.12.8-alpha-g262e0902bb" />
+		<PackageReference Include="PortingAssistant.Client.Telemetry" Version="1.12.42-alpha-g51acfaf8c5" />
+		<PackageReference Include="PortingAssistant.Client.Common" Version="1.12.42-alpha-g51acfaf8c5" />
 	</ItemGroup>
 
 </Project>
