--- a/src/PortingAssistantExtensionTelemetry/PortingAssistantExtensionTelemetry.csproj
+++ b/src/PortingAssistantExtensionTelemetry/PortingAssistantExtensionTelemetry.csproj
@@ -8,8 +8,9 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="PortingAssistant.Client.Telemetry" Version="2.0.3" />
-		<PackageReference Include="PortingAssistant.Client.Common" Version="2.0.3" />
+		<PackageReference Include="PortingAssistant.Client.Client" Version="2.1.8" />
+		<PackageReference Include="PortingAssistant.Client.Telemetry" Version="2.1.8" />
+		<PackageReference Include="PortingAssistant.Client.Common" Version="2.1.8" />
 	</ItemGroup>
 
 </Project>
