--- a/tst/PortingAssistantExtensionUITests_FlaUI/IDE_UITest.csproj
+++ b/tst/PortingAssistantExtensionUITests_FlaUI/IDE_UITest.csproj
@@ -5,6 +5,8 @@
     <Nullable>enable</Nullable>
 
     <IsPackable>false</IsPackable>
+
+    <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,6 +14,8 @@
     <PackageReference Include="AWSSDK.SecretsManager" Version="3.7.2.16" />
     <PackageReference Include="FlaUI.Core" Version="3.2.0" />
     <PackageReference Include="FlaUI.UIA3" Version="3.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="2.2.7" />
+    <PackageReference Include="Microsoft.Build.Framework" Version="17.1.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
