update Dummy Arn

--- a/tst/PortingAssistantExtensionUITests_FlaUI/appsettings.json
+++ b/tst/PortingAssistantExtensionUITests_FlaUI/appsettings.json
@@ -7,7 +7,7 @@
     "vsixinstaller-path": "C:\\Program Files (x86)\\Microsoft Visual Studio\\2019\\Professional\\Common7\\IDE\\VSIXInstaller.exe"
   },
   "aws": {
-    "AwsProfileSecretArn": "",
+    "AwsProfileSecretArn": "dummyArn",
     "AwsRegion": "us-west-2"
   },
   "vslocation": {
