--- a/tst/PortingAssistantExtensionUITests_FlaUI/appsettings.json
+++ b/tst/PortingAssistantExtensionUITests_FlaUI/appsettings.json
@@ -1,12 +1,13 @@
 {
   "input": {
-    "assess-solution-path1": "C:\\git\\TestProjects\\net472\\OwinExtraAPI\\OwinExtraAPI.sln",
+    "assess-solution-path1": "C:\\ide-ui-test-solutions\\CoreMVC\\CoreMVC.sln",
     "assess-solution-path2": "value1",
-    "porting-solution-path1": "C:\\git\\TestProjects\\net472\\OwinExtraAPI\\OwinExtraAPI.sln",
-    "porting-solution-path2": "value1"
+    "pa-extension-2019-download-url": "https://awspa.gallerycdn.vsassets.io/extensions/awspa/awsportingassistant/1.1.9/1650057135610/PortingAssistant.Extension-2019-1.1.9-release.vsix",
+    "pa-extension-2019-local-path": "C:\\PAExtension2019.vsix",
+    "vsixinstaller-path": "C:\\Program Files (x86)\\Microsoft Visual Studio\\2019\\Professional\\Common7\\IDE\\VSIXInstaller.exe"
   },
   "aws": {
-    "AwsProfileSecretArn": "",
+    "AwsProfileSecretArn": "dummyArn",
     "AwsRegion": "us-west-2"
   },
   "vslocation": {
