--- a/src/PortingAssistantExtensionServer/PortingAssistantExtensionServer.csproj
+++ b/src/PortingAssistantExtensionServer/PortingAssistantExtensionServer.csproj
@@ -13,8 +13,8 @@
 	<ItemGroup>
 		<PackageReference Include="OmniSharp.Extensions.LanguageProtocol" Version="0.18.3" />
 		<PackageReference Include="OmniSharp.Extensions.LanguageServer" Version="0.18.3" />
-		<PackageReference Include="PortingAssistant.Client.Client" Version="2.2.2" />
-		<PackageReference Include="PortingAssistant.Client.Common" Version="2.2.2" />
+		<PackageReference Include="PortingAssistant.Client.Client" Version="2.3.2-alpha-g3baf07641a" />
+		<PackageReference Include="PortingAssistant.Client.Common" Version="2.3.2-alpha-g3baf07641a" />
 		<PackageReference Include="Serilog" Version="2.10.0" />
 		<PackageReference Include="Serilog.Extensions.Logging" Version="3.1.0" />
 		<PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
