Commit local changes of UI test

--- a/tst/PortingAssistantExtensionUITests_FlaUI/appsettings.json
+++ b/tst/PortingAssistantExtensionUITests_FlaUI/appsettings.json
@@ -2,8 +2,15 @@
   "input": {
     "assess-solution-path1": "C:\\ide-ui-test-solutions\\CoreMVC\\CoreMVC.sln",
     "assess-solution-path2": "value1",
+    "porting-path-source": "C:\\git\\TestProjects\\net472\\OwinExtraAPI",
+    "porting-path-destination": "C:\\",
+    "porting-solution-path": "C:\\OwinExtraAPI\\OwinExtraAPI.sln",
+    "test-deployment-solution-path1": "C:\\git\\TestProjects\\netcoreapp3.1\\CoreMVC\\CoreMVC.sln",
+    "publish-target-path1": "C:\\git\\TestProjects\\netcoreapp3.1\\coremvc-publish",
     "pa-extension-2019-download-url": "https://awspa.gallerycdn.vsassets.io/extensions/awspa/awsportingassistant/1.1.9/1650057135610/PortingAssistant.Extension-2019-1.1.9-release.vsix",
     "pa-extension-2019-local-path": "C:\\PAExtension2019.vsix",
+    "pa-extension-2022-download-url": "https://awspa.gallerycdn.vsassets.io/extensions/awspa/awsportingassistant2022/1.1.10/1654554655502/PortingAssistant.Extension-2022-1.1.10-release.vsix",
+    "pa-extension-2022-local-path": "C:\\PAExtension2022.vsix",
     "vsixinstaller-path": "C:\\Program Files (x86)\\Microsoft Visual Studio\\2019\\Professional\\Common7\\IDE\\VSIXInstaller.exe"
   },
   "aws": {
@@ -12,7 +19,6 @@
   },
   "vslocation": {
     "2019": "C:\\Program Files (x86)\\Microsoft Visual Studio\\2019\\Professional\\Common7\\IDE\\devenv.exe",
-    "2022": ""
+    "2022": "C:\\Program Files\\Microsoft Visual Studio\\2022\\Professional\\Common7\\IDE\\devenv.exe"
   }
-
 }
