fix: missing vb in get text doc attribute

--- a/src/PortingAssistantExtensionUnitTest/PortingAssistantExtensionUnitTest.csproj
+++ b/src/PortingAssistantExtensionUnitTest/PortingAssistantExtensionUnitTest.csproj
@@ -32,4 +32,8 @@
 	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
 	</Content>
   </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="TestSolution\TestVbProject\TestClass.vb" />
+  </ItemGroup>
 </Project>
