Update required VS version for Net 3.1 and NET 5

--- a/src/PortingAssistantVSExtensionClient2022/Resources/porting-assistant-config.json
+++ b/src/PortingAssistantVSExtensionClient2022/Resources/porting-assistant-config.json
@@ -18,13 +18,13 @@
       {
         "DisplayName": ".NET Core 3.1 (Microsoft LTS)",
         "VersionKey": "netcoreapp3.1",
-        "RequiredVisualStudioVersion": "",
+        "RequiredVisualStudioVersion": "16.0.0",
         "RecommendOrder": 2
       },
       {
         "DisplayName": ".NET 5 (Microsoft out of support)",
         "VersionKey": "net5.0",
-        "RequiredVisualStudioVersion": "",
+        "RequiredVisualStudioVersion": "16.0.0",
         "RecommendOrder": 3
       }
     ]
